--- a/index.html
+++ b/index.html
@@ -5,22 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c1bb6704d0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
     <title>Dune:Part Two (2024)</title>
 </head>
 <body>
+    <h1>Dune:Part Two (2024)</h1>
 
-    <div class="container">
-        
-        <div class="movie-card">
-            <div class="movie-poster-container"></div>
-            <img class="movie-poster" src="images/Dune.jpg" alt="Dune poster">
+    <p><i>Long live the fighters.</i></p>
 
-    </div>
+    <h2>Overview</h2>
+    <p>Follow the mythic journey of Paul Atreides as he unites with Chani and the Fremen while on a path of revenge against the conspirators who destroyed his family. </p>
 
+    <img src="images/Dune.jpg" alt="Dune" width="250px">
 
-    <!-- <footer>
+    <hr>
+
+    <table border="1">
+        <tbody>
+            <tr>
+                <th>Budget <i class="fas fa-file-invoice-dollar"></i></th>
+                <td>$190,000,000.00</td>
+            </tr>
+            <tr>
+                <th>Revenue <i class="fas fa-coins"></i></th>
+                <td>$711,844,359.00</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <hr>
+
+    <p><a href="https://www.themoviedb.org/movie/693134-dune-part-two" target="_blank">Source </a></p>
+
+    <hr>
+
+    <footer>
         <h3>Find me to discuss the movie</h3>
+     
+        <!-- ul -unordered list -->
         <ul>
             <li> <a href="#">Twitter <i class="fab fa-twitter"></i></li>
             <li> <a href="#">Instagram <i class="fab fa-instagram"></i></li>
@@ -29,7 +50,7 @@
 
         <p>Johanna Avik &#169; 2024</p>
 
-    </footer> -->
+    </footer>
 
 </body>
 </html>
